<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mituo.wshoto.com.mituo.ui.activity.CarInfoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:elevation="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:titleTextColor="@color/font_33"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="585dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4">

        <TextView
            android:id="@+id/owner_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/car_onwer"/>

        <TextView
            android:id="@+id/owner_telephone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:text="@string/telephone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="585dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        >

        <TextView
            android:id="@+id/tv_car_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/owner_name"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/card_num"/>

        <TextView
            android:id="@+id/tv_car_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/owner_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/car_type"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/car_num2"/>

        <EditText
            android:id="@+id/et_car_model_num"
            style="@style/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_car_num2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/mileage"/>

        <EditText
            android:id="@+id/et_mile"
            style="@style/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mileage"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/next_care_time"/>

        <TextView
            android:id="@+id/tv_care_next_time"
            style="@style/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_next_care_km"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/next_care_km"/>

        <EditText
            android:id="@+id/et_next_care_mile"
            style="@style/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_next_care_km"
            android:inputType="number"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
