<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp">

    <RelativeLayout
        android:id="@+id/affair_title_rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">


        <RelativeLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/affair_direction_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:src="@drawable/order_details_icon_cheliangxinxi"/>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/affair_direction_iv"
                android:padding="8dp"
                android:text="车辆信息"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/affair_info_rl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:orientation="vertical"
            android:padding="8dp"
            android:scaleY="0"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/owner_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/car_onwer"
                    android:textColor="@color/font_33"/>

                <TextView
                    android:id="@+id/owner_telephone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/telephone"
                    android:textColor="@color/font_33"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/card_num"
                    android:textColor="@color/font_33"/>

                <TextView
                    android:id="@+id/telephone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/car_type"
                    android:textColor="@color/font_33"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/car_num_edit"
                android:textColor="@color/font_33"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/engine_num"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/engine_num_edit"
                    android:textColor="@color/font_33"/>

                <TextView
                    android:id="@+id/total_mileage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/mileage_edit"
                    android:textColor="@color/font_33"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/next_care_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/next_care_time_edit"
                    android:textColor="@color/font_33"/>

                <TextView
                    android:id="@+id/next_care_mileage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/next_care_km_edit"
                    android:textColor="@color/font_33"/>
            </LinearLayout>

            <Button
                android:id="@+id/car_info_edit"
                android:layout_width="600px"
                android:layout_height="72px"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24px"
                android:background="@drawable/boder_blue"
                android:text="编辑"
                android:textColor="@color/white"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>