<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:cardBackgroundColor="#80cbc4"
                                    app:cardCornerRadius="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_finished_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_num"/>

        <View
            android:id="@+id/dotted_line"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:background="@drawable/bg_dotted_line"/>

        <TextView
            android:id="@+id/tv_finished_car_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_num"/>

        <TextView
            android:id="@+id/tv_finished_data_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_time"/>
    </LinearLayout>

</android.support.v7.widget.CardView>