<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp">

    <RelativeLayout
        android:id="@+id/affair_title_rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">


        <RelativeLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/affair_direction_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:src="@drawable/order_details_icon_weixiuluxiang"/>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/affair_direction_iv"
                android:padding="8dp"
                android:text="维修录像"/>

            <TextView
                android:id="@+id/tv_remind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:textColor="@color/font_red"/>

            <ImageView
                android:id="@+id/iv_remind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/iv_remind"
                android:padding="8dp"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/affair_info_rl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/title"
            android:orientation="vertical"
            android:padding="8dp"
            android:scaleY="0"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/video_name"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/video_time"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/video_size"/>


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/video_state2"/>

        </LinearLayout>

        <Button
            android:id="@+id/video_edit"
            android:layout_width="600px"
            android:layout_height="72px"
            android:layout_below="@id/affair_info_rl"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24px"
            android:background="@drawable/boder_blue"
            android:padding="8dp"
            android:text="开始录像"
            android:layout_margin="8dp"
            android:textColor="@color/white"
            android:visibility="gone"/>

    </RelativeLayout>


</android.support.v7.widget.CardView>