<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp"
                                    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:id="@+id/affair_title_rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">


        <RelativeLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="100px">

            <ImageView
                android:id="@+id/affair_direction_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:src="@drawable/order_details_icon_dingdanxinxi"/>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/affair_direction_iv"
                android:padding="8dp"
                android:text="订单信息"
                android:textColor="@color/font_33"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/affair_info_rl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/title"
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            android:padding="8dp"
            android:scaleY="0"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/order_num"
                android:textColor="@color/font_33"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/data_time"
                android:textColor="@color/font_33"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/data_address"
                android:textColor="@color/font_33"/>

        </LinearLayout>

    </RelativeLayout>


</android.support.v7.widget.CardView>